--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -64,10 +64,8 @@
 
                     } else if (response.data == 'OK') {
 
-                        var id = response.id;
-
-                        // 로그인하러
-                        location.href = '/login';
+                        // 메인으로 이동
+                        location.href = '/welcome';
                     }
                 }
             });
