1. 디자인변경, css정리, 로그아웃 후 로그인 방지

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -5,45 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인화면</title>
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
+    <!-- css -->
+    <link rel="stylesheet" href="/stylesheets/welcome.css" type="text/css">
+
+    <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
     <style>
-        * {
+       /*  * {
             font-family: 'Jua', sans-serif;
-        }
-
-        .wrap {
-            width: 300px;
-            margin: auto;
-            text-align: center;
-            padding: 20px;
-            border: 1px solid black;
-        }
-
-        .username {
-            font-size: 25px;
-        }
-
-        .m-t-10 {
-            margin-top: 10px;
-        }
-
-        .m-t-40 {
-            margin-top: 40px;
-        }
-
-        .btn {
-            width: 300px;
-            height: 30px;
-            cursor: pointer;
-            background-color:lightgray;
-            border-radius: 0px;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            border: none;
-        }
+        } */
     </style>
     <script>
 
@@ -51,10 +27,22 @@
             getName();
         })
 
+        // 창 종료 이벤트
+        $(window).bind("beforeunload", function () {
+
+            $.ajax({
+                type: 'POST',
+                url: '/users/close',
+                success: function (response) {
+
+                }
+            });
+        })
+
         function getName() {
             $.ajax({
                 type: 'GET',
-                url: '/users/getName',
+                url: '/users/getUser',
                 dataType: 'json',
                 success: function (response) {
 
@@ -66,6 +54,8 @@
                     } else if (response.data == 'OK') {
 
                         $('#name').text(response.name);
+                        $('#email').text(response.email);
+                        $('#login_method').text(response.login_method);
                     }
                 }
             });
@@ -73,14 +63,23 @@
     </script>
 </head>
 
-<body>
+<body class="container">
     <div class="wrap">
-        <h1>Welcome!</h1>
-        <span class="username" id="name"></span>님
-        <hr class="m-t-40">
-        <form action="/users/logout" method="post">
-            <input class="m-t-10 btn" type="submit" value="로그아웃" />
-        </form>
+        <div class="title">마이페이지</div>
+        <div class="info-header">
+            <div class="username">
+                <span class="name" id="name"></span>님
+            </div>
+            <form  action="/users/logout" method="post">
+                <input class="btn-logout" type="submit" value="로그아웃" />
+            </form>
+        </div>
+        <div class="info-footer">
+            <div class="head">이메일</div>
+            <div class="content" id="email"></div>
+            <div class="head m-t-20">로그인방법</div>
+            <div class="content m-t-20" id="login_method"></div>
+        </div>
     </div>
 </body>
 
