--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,130 +5,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
+    <!-- css -->
+    <link rel="stylesheet" href="/stylesheets/autologin.css" type="text/css">
+
+    <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="/javascripts/device-uuid.js" type="text/javascript"></script>
+    
     <style>
-        * {
+        /* * {
             font-family: 'Jua', sans-serif;
-        }
-
-        .wrap {
-            visibility: hidden;
-            width: 300px;
-            margin: auto;
-            text-align: center;
-            padding: 20px;
-            border: 1px solid black;
-        }
-
-        .m-t-10 {
-            margin-top: 10px;
-        }
-
-        .m-t-20 {
-            margin-top: 20px;
-        }
-
-        input {
-            width: 300px;
-            height: 30px;
-            box-sizing: border-box;
-        }
-
-        .btn {
-            width: 300px;
-            height: 30px;
-            cursor: pointer;
-            border: none;
-        }
-
-        .login {
-            background-color: lightgray;
-            border-radius: 0px;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-        }
-
-        .naver-login-btn {
-            background-color: limegreen;
-            color: white;
-        }
-
-        .kakao-login-btn {
-            background-color: gold;
-            color: black;
-        }
-
-        .facebook-login-btn {
-            background-color: rgb(53, 96, 175);
-            color: white;
-        }
-
-        .google-login-btn {
-            background-color: rgb(209, 71, 71);
-            color: white;
-        }
-
-        .signup {
-            background-color: lightgray;
-        }
+        } */
     </style>
     <script>
 
         $(function () {
 
-            getBrowserInfo();
+            /* // 브라우저 정보 가져오기
+            getBrowserInfo(); */
 
-            // 디바이스 uuid 가져오기
-            getDeviceUUID();
+            /* // 디바이스 uuid 가져오기
+            getDeviceUUID(); */
 
-            // 로그인 화면 접속하자마자 쿠키, 세션확인하기
-            getSession();
+            // 로그인 화면 접속하자마자 쿠키, 세션확인하기 (FileStore)
+            //getSession();
 
-            // mssql session 확인하기
+            // 로그인 화면 접속하자마자 쿠키, 세션확인하기 (MS SQL)
             getSessionMssql();
 
         })
 
-        $(window).bind("beforeunload", function() {
+        // 창 종료 이벤트
+        $(window).bind("beforeunload", function () {
 
             $.ajax({
                 type: 'POST',
                 url: '/users/close',
-                cache: 'false',
-                async: 'false',
                 success: function (response) {
 
                 }
             });
         })
 
-        function getBrowserInfo() {
+        /* function getBrowserInfo() {
 
             var agent = navigator.userAgent;
             console.log('Brwoser Info : ', agent);
 
-        }
+        } */
 
-        function getDeviceUUID() {
+        /*  function getDeviceUUID() {
+ 
+             var uuid = new DeviceUUID().get();
+             console.log('Device UUID : ', uuid);
+ 
+             $.ajax({
+                 type: 'GET',
+                 url: '/users/getUUID',
+                 data: {uuid: uuid},
+                 success: function (response) {
+ 
+                 }
+             });
+         } */
 
-            var uuid = new DeviceUUID().get();
-            console.log('Device UUID : ', uuid);
-
-            $.ajax({
-                type: 'GET',
-                url: '/users/getUUID',
-                data: {uuid: uuid},
-                success: function (response) {
-
-                }
-            });
-        }
-
-        function getSession() {
+        /* function getSession() {
 
             $.ajax({
                 type: 'GET',
@@ -150,21 +96,62 @@
                     }
                 }
             });
-        }
+        } */
 
-            function getSessionMssql() {
+        function getSessionMssql() {
 
-                $.ajax({
-                    type: 'GET',
-                    url: '/users/getSessionMssql',
-                    success: function (response) {
+            $.ajax({
+                type: 'GET',
+                url: '/users/getSessionMssql',
+                success: function (response) {
+
+                    console.log(response.data);
+
+                    if (response.data == 'NO') {
+
+                        // 로그인창 보여주기
+                        $('.wrap').css('visibility', 'visible');
+
+                    } else if (response.data == 'OK') {
+
+                        // 메인으로 이동
+                        location.href = '/welcome';
 
                     }
-                });
-            }
+                }
+            });
+        }
 
-        function goSignUp() {
+        /* function goSignUp() {
             location.href = '/signup';
+        } */
+
+        function emailLogin() {
+
+            var formData = $('#loginForm').serialize();
+
+            $.ajax({
+                    type: 'POST',
+                    url: '/users/emaillogin',
+                    data: formData,
+                    cache : false,
+                    success: function (response) {
+                        // 페이지 호출 성공 시 로그인 성공/실패 처리
+                        console.log('emaillogin response : ', response.data);
+                        var data = response.data;
+                        
+                        if (data == 'NO') {
+                            
+                            // 로그인 버튼 위에 '아이디 또는 비밀번호가 일치하지 않습니다.' 보여주기
+                            alert('아이디 또는 비밀번호가 일치하지 않습니다.');
+
+                        } else if (data == 'OK') {
+
+                            // 메인으로 이동
+                            location.href = '/welcome';
+                        }
+                    }
+                });
         }
 
         function naverLogin() {
@@ -185,36 +172,34 @@
     </script>
 </head>
 
-<body>
+<body class="container">
     <div class="wrap">
-        <h1>LOGIN</h1>
-        <form action="/users/emaillogin" method="post">
+        <div class="title">로그인</div>
+        <!-- <form action="/users/emaillogin" method="post"> -->
+        <form id="loginForm" name="loginForm" method="post">
             <div>
-                <input type="text" name="email" placeholder="이메일" />
+                <input class="input email" type="text" name="email" placeholder="이메일" />
+                <input class="input pw" type="password" name="pw" placeholder="비밀번호" />
             </div>
-            <div class="m-t-10">
-                <input type="password" name="pw" placeholder="비밀번호" />
-            </div>
-            <div class="m-t-10">
-                <input class="btn login" type="submit" value="로그인" />
+            <div>
+                <input class="btn login" type="button" onclick="emailLogin(); return false;" value="로그인" />
             </div>
         </form>
-        <hr class="m-t-20">
+        <div>
+            <a class="btn-signup" href="/signup">회원가입</a>
+        </div>
+        <hr>
         <div class="m-t-10">
-            <button class="btn naver-login-btn" onclick="naverLogin()">네이버 로그인</button>
+            <button class="btn naver" onclick="naverLogin()">네이버 로그인</button>
         </div>
         <div class="m-t-10">
-            <button class="btn kakao-login-btn" onclick="kakaoLogin()">카카오 로그인</button>
+            <button class="btn kakao" onclick="kakaoLogin()">카카오 로그인</button>
         </div>
         <div class="m-t-10">
-            <button class="btn facebook-login-btn" onclick="facebookLogin()">페이스북 로그인</button>
+            <button class="btn facebook" onclick="facebookLogin()">페이스북 로그인</button>
         </div>
         <div class="m-t-10">
-            <button class="btn google-login-btn" onclick="googleLogin()">구글 로그인</button>
-        </div>
-        <hr class="m-t-20">
-        <div class="m-t-20">
-            <button class="btn signup" onclick="goSignUp()">회원가입</button>
+            <button class="btn google" onclick="googleLogin()">구글 로그인</button>
         </div>
     </div>
 </body>
