--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,43 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
+
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
+    <!-- css -->
+    <link rel="stylesheet" href="/stylesheets/autologin_signup.css" type="text/css">
+
+    <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
     <style>
-        * {
+        /* * {
             font-family: 'Jua', sans-serif;
-        }
-
-        .wrap {
-            width: 300px;
-            margin: auto;
-            text-align: center;
-            padding: 20px;
-            border: 1px solid black;
-        }
-
-        .m-t-10 {
-            margin-top: 10px;
-        }
-
-        .m-t-20 {
-            margin-top: 20px;
-        }
-
-        input {
-            width: 300px;
-            height: 30px;
-            box-sizing: border-box;
-        }
-
-        .btn {
-            width: 300px;
-            height: 30px;
-            cursor: pointer;
-            background-color: lightgray;
-            border: none;
-        }
+        } */
     </style>
     <script>
         function signup() {
@@ -70,23 +48,32 @@
                 }
             });
         }
+
+        // 창 종료 이벤트
+        $(window).bind("beforeunload", function () {
+
+            $.ajax({
+                type: 'POST',
+                url: '/users/close',
+                success: function (response) {
+
+                }
+            });
+        })
     </script>
 </head>
 
-<body>
+<body class="container">
     <div class="wrap">
-        <h1>Sign Up</h1>
+        <div class="title">회원가입</div>
+        <div class="desc">이메일로 계정을 만들 수 있어요</div>
         <div>
-            <input type="text" id="name" placeholder="이름" />
+            <input class="input-name" type="text" id="name" placeholder="이름" />
+            <input class="input-email" type="text" id="email" placeholder="이메일" />
+            <input class="input-pw" type="password" id="pw" placeholder="비밀번호" />
         </div>
-        <div class="m-t-10">
-            <input type="text" id="email" placeholder="이메일" />
-        </div>
-        <div class="m-t-10">
-            <input type="password" id="pw" placeholder="비밀번호" />
-        </div>
-        <div class="m-t-10">
-            <button class="btn" onclick="signup()">회원가입</button>
+        <div>
+            <button class="btn signup" onclick="signup()">가입하기</button>
         </div>
     </div>
 </body>
