--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -120,7 +120,6 @@ form {
 .content {
     width: 200px;
     height: 19px;
-    margin-right: 50px;
     font-family: 'S-CoreDream-4';
     font-size: 14px;
     font-weight: normal;
@@ -130,5 +129,5 @@ form {
     letter-spacing: normal;
     text-align: left;
     color: #191919;
-    float: right;
+    float: left;
 }
