--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,11 +12,12 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/stylesheets/autologin.css" type="text/css">
+    <link rel="shortcut icon" href="#">
 
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="/javascripts/device-uuid.js" type="text/javascript"></script>
-    
+    <!-- <script src="/javascripts/device-uuid.js" type="text/javascript"></script> -->
+
     <style>
         /* * {
             font-family: 'Jua', sans-serif;
@@ -40,7 +41,7 @@
 
         })
 
-        // 창 종료 이벤트
+        /* // 창 종료 이벤트
         $(window).bind("beforeunload", function () {
 
             $.ajax({
@@ -50,7 +51,7 @@
 
                 }
             });
-        })
+        }) */
 
         /* function getBrowserInfo() {
 
@@ -131,27 +132,28 @@
             var formData = $('#loginForm').serialize();
 
             $.ajax({
-                    type: 'POST',
-                    url: '/users/emaillogin',
-                    data: formData,
-                    cache : false,
-                    success: function (response) {
-                        // 페이지 호출 성공 시 로그인 성공/실패 처리
-                        console.log('emaillogin response : ', response.data);
-                        var data = response.data;
-                        
-                        if (data == 'NO') {
-                            
-                            // 로그인 버튼 위에 '아이디 또는 비밀번호가 일치하지 않습니다.' 보여주기
-                            alert('아이디 또는 비밀번호가 일치하지 않습니다.');
+                type: 'POST',
+                url: '/users/emaillogin',
+                data: formData,
+                cache: false,
+                success: function (response) {
+                    // 페이지 호출 성공 시 로그인 성공/실패 처리
+                    console.log('emaillogin response : ', response.data);
+                    var data = response.data;
 
-                        } else if (data == 'OK') {
+                    if (data == 'OK') {
 
-                            // 메인으로 이동
-                            location.href = '/welcome';
-                        }
+                        // 메인으로 이동
+                        $('.warning').css('display', 'none');
+                        location.href = '/welcome';
+
+                    } else if (data == 'NO') {
+
+                        $('.warning-text').text('아이디 또는 비밀번호가 일치하지 않습니다.');
+                        $('.warning').css('display', 'block');
                     }
-                });
+                }
+            });
         }
 
         function naverLogin() {
@@ -175,11 +177,14 @@
 <body class="container">
     <div class="wrap">
         <div class="title">로그인</div>
-        <!-- <form action="/users/emaillogin" method="post"> -->
         <form id="loginForm" name="loginForm" method="post">
             <div>
-                <input class="input email" type="text" name="email" placeholder="이메일" />
-                <input class="input pw" type="password" name="pw" placeholder="비밀번호" />
+                <input class="email" type="text" name="email" placeholder="이메일" />
+                <input class="pw" type="password" name="pw" placeholder="비밀번호" />
+            </div>
+            <div class="warning">
+                <div class="warning-icon">!</div>
+                <div class="warning-text"></div>
             </div>
             <div>
                 <input class="btn login" type="button" onclick="emailLogin(); return false;" value="로그인" />
