--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,6 +12,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/stylesheets/autologin_signup.css" type="text/css">
+    <link rel="shortcut icon" href="#">
 
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -23,33 +24,45 @@
     </style>
     <script>
         function signup() {
-            var name = $('#name').val();
-            var email = $('#email').val();
-            var pw = $('#pw').val();
+
+            var formData = $('#signupForm').serialize();
 
             $.ajax({
                 type: 'POST',
                 url: '/users/signup',
-                data: { name: name, email: email, pw: pw },
-                dataType: "json",
+                data: formData,
+                cache: false,
                 success: function (response) {
 
-                    console.log(response.data);
+                    console.log('signup response : ', response.data);
 
-                    if (response.data == 'NO') {
-
-                        alert('이미 가입한 사용자입니다.');
-
-                    } else if (response.data == 'OK') {
+                    if (response.data == 'OK') {
 
                         // 메인으로 이동
+                        $('.warning').css('display', 'none');
                         location.href = '/welcome';
+
+                    } else if (response.data == 'NULL') {
+
+                        $('.warning-text').text('내용을 모두 입력해주세요.');
+                        $('.warning').css('display', 'block');
+
+                    } else if (response.data == 'DP') {
+
+                        $('.warning-text').text('비밀번호가 일치하지 않습니다.');
+                        $('.warning').css('display', 'block');
+
+                    } else if (response.data == 'OVERLAP') {
+
+                        $('.warning-text').text('이미 등록되어 있는 이메일입니다.');
+                        $('.warning').css('display', 'block');
+
                     }
                 }
             });
         }
 
-        // 창 종료 이벤트
+        /* // 창 종료 이벤트
         $(window).bind("beforeunload", function () {
 
             $.ajax({
@@ -59,7 +72,7 @@
 
                 }
             });
-        })
+        }) */
     </script>
 </head>
 
@@ -67,14 +80,21 @@
     <div class="wrap">
         <div class="title">회원가입</div>
         <div class="desc">이메일로 계정을 만들 수 있어요</div>
-        <div>
-            <input class="input-name" type="text" id="name" placeholder="이름" />
-            <input class="input-email" type="text" id="email" placeholder="이메일" />
-            <input class="input-pw" type="password" id="pw" placeholder="비밀번호" />
-        </div>
-        <div>
-            <button class="btn signup" onclick="signup()">가입하기</button>
-        </div>
+        <form id="signupForm" name="signupForm" method="post">
+            <div>
+                <input class="name" type="text" name="name" placeholder="이름" />
+                <input class="email" type="text" name="email" placeholder="이메일" />
+                <input class="pw" type="password" name="pw" placeholder="비밀번호" />
+                <input class="pwCheck" type="password" name="pwCheck" placeholder="비밀번호 확인" />
+            </div>
+            <div class="warning">
+                <div class="warning-icon">!</div>
+                <div class="warning-text"></div>
+            </div>
+            <div>
+                <input class="btn signup" type="button" onclick="signup(); return false;" value="가입하기" />
+            </div>
+        </form>
     </div>
 </body>
 
