--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -12,6 +12,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="/stylesheets/welcome.css" type="text/css">
+    <link rel="shortcut icon" href="#">
 
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
