--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -18,14 +18,15 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <style>
-       /*  * {
+        /*  * {
             font-family: 'Jua', sans-serif;
         } */
     </style>
     <script>
 
-        $(function() {
-            checkSession();
+        $(function () {
+            getUser();
+            // checkSession();
         })
 
         // 창 종료 이벤트
@@ -40,7 +41,7 @@
             });
         })
 
-        function checkSession() {
+        /* function checkSession() {
             $.ajax({
                 type: 'GET',
                 url: '/users/checkSession',
@@ -58,7 +59,7 @@
 
                 }
             });
-        }
+        } */
 
         function getUser() {
             $.ajax({
@@ -71,7 +72,7 @@
 
                         alert('로그인해주세요.');
                         location.href = '/login';
-                        
+
                     } else if (response.data == 'OK') {
 
                         $('#name').text(response.name);
@@ -93,7 +94,7 @@
             <div class="username">
                 <span class="name" id="name"></span>님
             </div>
-            <form  action="/users/logout" method="post">
+            <form action="/users/logout" method="post">
                 <input class="btn-logout" type="submit" value="로그아웃" />
             </form>
         </div>
